# stm32-template

./: .gitignore  Makefile  bluepill.cfg  main.c
stm32f103c8t6/: main.c  stm32f1xx_hal_conf.h
stm32f407vg/: .atom-build.yaml  CMakeLists.txt  Makefile  main.c  run_cmake.sh
stm32f407vg/sdk/: CMakeLists.txt  stm32f4xx_hal_conf.h
